tests/baselines/reference/es6ImportDefaultBindingFollowedWithNamespaceBindingInEs5.errors.txt
tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamespaceBindingInEs5_1.ts(1,8): error TS2467: External module 'es6ImportDefaultBindingFollowedWithNamespaceBindingInEs5_0' has no default export or export assignment.


==== tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamespaceBindingInEs5_0.ts (0 errors) ====
    
    export var a = 10;
    
==== tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamespaceBindingInEs5_1.ts (1 errors) ====
    import defaultBinding, * as nameSpaceBinding  from "es6ImportDefaultBindingFollowedWithNamespaceBindingInEs5_0";
           ~~~~~~~~~~~~~~
!!! error TS2467: External module 'es6ImportDefaultBindingFollowedWithNamespaceBindingInEs5_0' has no default export or export assignment.
    var x: number = nameSpaceBinding.a;